--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Des livres pour tous</title>
     <link rel="stylesheet" href="css/main.css">
-    <script type="module" src="js/server.js"></script>
+    <script src="js/airtable.browser.js"></script>
+    <script src="js/server.js"></script>
     <script></script>
 </head>
 <body>
     <header></header>
     <h1>hello word</h1>
+    <p>test</p>
     <main>
         <div class="books__container">
 
